# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./events";
 export * from "./prayers";
 export * from "./focus";
 export * from "./islamic";
+export * from "./settings";
